update for real authentication.

--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ PORT= 3000
 API_URL=http://localhost:3000
 DATABASE_URL=mongodb://localhost:27017/ecomerce
 JWT_SECRET=gulit_secret_key_12345
+GOOGLE_CLIENT_ID=329650621062-e1ho5qube9ap3b595cdf4gjvi8uj8777.apps.googleusercontent.com
+ADMIN_RESET_URL=http://localhost:5173/admin/reset-password
