setup for forgot password functionality using real gmail account through SMTP

--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,10 @@ DATABASE_URL=mongodb://localhost:27017/ecomerce
 JWT_SECRET=gulit_secret_key_12345
 GOOGLE_CLIENT_ID=329650621062-e1ho5qube9ap3b595cdf4gjvi8uj8777.apps.googleusercontent.com
 ADMIN_RESET_URL=http://localhost:5173/admin/reset-password
+SMTP_FROM_EMAIL=gulitecommerce.noreply@gmail.com
+SMTP_USER=gulitecommerce.noreply@gmail.com
+SMTP_PASS=emxkgwzvpwklppme
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+BUYER_RESET_URL=http://localhost:5173/reset-password
+SELLER_RESET_URL=http://localhost:5173/seller/reset-password
